[package]
name = "comms"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Masala <antonio@damac.it>"]
description = "Library for RabbitMQ and Redis communication"
license = "MIT"
repository = "https://github.com/damac-italia/comms"

[dependencies]
redis = "0.32.7"
lapin = { version = "3.7.2", features = ["unstable"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-stream = "0.1.17"
log = "0.4.28"
env_logger = "0.11.8"
