[package]
name = "comms"
version = "0.2.0"
edition = "2024"
authors = ["Antonio Masala <antonio@damac.it>"]
description = "Library for RabbitMQ and Redis communication"
license = "MIT"
repository = "https://github.com/damac-italia/comms"

[dependencies]
redis = "0.32.7"
deadpool-lapin = "0.13.1"
async-trait = "0.1.89"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
log = "0.4.29"
env_logger = "0.11.8"
chrono = "0.4.43"
dotenvy = "0.15.7"
comms-macros = { path = "./comms-macros" }
