[package]
name = "comms"
version = "0.2.4"
edition = "2024"
authors = ["Antonio Masala <antonio@damac.it>"]
description = "Library for RabbitMQ and Redis communication"
license = "MIT"
repository = "https://github.com/damac-italia/comms"

[dependencies]
redis = "0.32.7"
deadpool-lapin = { version = "0.13.1", features = ["native-tls", "default-runtime"] }
deadpool = { version = "0.13.0", features = ["managed"] }
native-tls = "0.2.18"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
log = "0.4.29"
env_logger = "0.11.9"
chrono = "0.4.44"
comms-macros = { path = "./comms-macros" }

[dev-dependencies]
dotenvy = "0.15.7"
